--- a/views/index.erb
+++ b/views/index.erb
@@ -138,7 +138,7 @@
         }
 
         //codeAddress();
-        loadTestLocations();
+        //loadTestLocations();
 
       }
 
@@ -178,6 +178,11 @@
           success: function(data) {
             console.log('success');
             testData = data;
+
+            _.each(data, function(evnt) { 
+               markers.push( setLocMarker(evnt.location));
+               attachInfoWindow(_.last(markers), evnt.location);
+            });
           },
           error: function(data) {
             alert("server error :(");
