--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,7 @@
     <script language="javascript" type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script language="javascript" type="text/javascript" src="javascript/underscore-min.js"></script>
     <script language="javascript" type="text/javascript" src="javascript/bootstrap-modal.js"></script>
+    <script language="javascript" type="text/javascript" src="javascript/spin.min.js"></script>
     <script language="javascript" type="text/javascript" src="javascript/bootstrap-tabs.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDCEhOTsxuuXVPsHbA4rPofhK1azdoF7-M&sensor=true"></script>
 
@@ -23,7 +24,7 @@
 
       <div class="pill-content">
         <div class="active" id="event">
-          <img src="halloween.jpg" />
+          <img src="images/halloween.jpg" />
         </div>
         <div id="event-location">Location Info</div>
       </div>
