--- a/views/index.erb
+++ b/views/index.erb
@@ -12,8 +12,8 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
     <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding-top: 40px }
+      html { height: 100%;}
+      body { height: 100%;}
     </style>
 
     <script id="infoTemplate" type="text/template">
@@ -68,8 +68,14 @@
       function attachInfoWindow(marker, loc) {
         var infowindow = new google.maps.InfoWindow(
             { content: _.template($('#infoTemplate').html())(loc)
-            });
+        });
+
+        // when window is closed return to our previous position
+        google.maps.event.addListener(infowindow, 'closeclick', function() {
+          map.setCenter(lastPosition);
+        });
         google.maps.event.addListener(marker, 'click', function() {
+          lastPosition = marker.getPosition();
           infowindow.open(map,marker);
         });
       }
@@ -191,24 +197,26 @@
   </head>
   <body onload="initialize()">
 
-    <div class="topbar-wrapper" style="z-index:5;">
-      <div class="topbar" data-dropdown="dropdown">
-        <div class="topbar-inner">
-          <div class="container">
-            <h2><a href="#"><strong>CLOSE // <span style="color:red;">ENOUGH</span></strong></a></h2>
-            <div class="nav secondary-nav">
-              <a class="btn primary large" data-controls-modal="post-img-modal" data-backdrop="static">Post Event</a>
-            </div>
+    <div class="topbar" data-scrollspy="scrollspy">
+      <div class="topbar-inner">
+        <div class="container">
+          <a class="brand" href="#">CLOSE // ENOUGH</a>
+          <ul class="nav">
+            <li class="active">
+              <a href="#" id="zoom-out-btn">Neighborhood View</a>
+            </li>
+            <li>
+              <a href="#" id="zoom-in-btn">Street View</a>
+            </li>
+          </ul>
+          <div class="secondary-nav nav">
+            <a class="btn primary large" data-controls-modal="post-img-modal" data-backdrop="static">Post Event</a>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="span12">
-      </div>
-    </div>
-    <div id="map_canvas" style="width:100%; height:100%"></div>
+    <div id="map_canvas" style="width:100%;height:100%;margin-top:40px;"></div>
 
     <div id="post-img-modal" class="modal hide fade">
       <div class="modal-header">
