saving events with locations

--- a/views/event.erb
+++ b/views/event.erb
@@ -2,7 +2,10 @@
   <body>
     <img src="<%= @event.flyer.url %>" />
     <br/>
+    <%= @event.flyer.current_path %>
+    <br/>
     <%= @event.to_s %>
+    <%= @event.location.name %>
     <br/>
     <%= @post_data.to_s %>
   </body>
