--- a/views/index.erb
+++ b/views/index.erb
@@ -175,15 +175,15 @@
         // kick off ajax request for locations
         $.ajax({
           type: "GET",
-          url: "locations.json",
+          url: "events.json",
           dataType: "json", 
           success: function(data) {
             console.log('success');
             testData = data;
 
             _.each(data, function(evnt) { 
-               markers.push( setLocMarker(evnt.location));
-               attachInfoWindow(_.last(markers), evnt.location);
+               markers.push( setLocMarker(evnt.event.location));
+               attachInfoWindow(_.last(markers), evnt.event.location);
             });
           },
           error: function(data) {
