--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
     <script language="javascript" type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script language="javascript" type="text/javascript" src=" https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <script language="javascript" type="text/javascript" src="javascript/underscore-min.js"></script>
     <script language="javascript" type="text/javascript" src="javascript/bootstrap-modal.js"></script>
     <script language="javascript" type="text/javascript" src="javascript/spin.min.js"></script>
