--- a/views/event.erb
+++ b/views/event.erb
@@ -1,7 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script language="javascript" type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script language="javascript" type="text/javascript" src=" https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js' type='text/javascript'></script>
+    <script language="javascript" type="text/javascript" src="javascript/underscore-min.js"></script>
+    <script language="javascript" type="text/javascript" src="javascript/bootstrap-modal.js"></script>
+    <script language="javascript" type="text/javascript" src="javascript/bootstrap-tabs.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDCEhOTsxuuXVPsHbA4rPofhK1azdoF7-M&sensor=true"></script>
+
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
   </head>
   <body>
     <img src="<%= @event.flyer.thumb.url %>" style="float:left; margin-right:20px" />
