Fixed form redirect

--- a/views/event.erb
+++ b/views/event.erb
@@ -39,7 +39,7 @@
     <div class="row">
       <h1 style="font-size: 2em;">A little closer...</h1>
       <div class="span8">
-        <form method="POST" action="event/update/<%= @event.id %>">
+        <form method="POST" action="/events/update/<%= @event.id %>">
           <div id="suggested-location" style="padding: 15px;">
             <h2>we think this is your location.</h2>
             <h2>we're probably wrong.</h2>
