Form and date fixes

--- a/views/event.erb
+++ b/views/event.erb
@@ -62,7 +62,7 @@
             <div class="clearfix">
               <label for="band-name" style="color:white;">What?</label>
               <div class="input">
-                <input name="event[band_name]" id="band-name" class="xlarge" size="30" />
+                <input name="band_name" id="band-name" class="date xlarge" size="30" />
               </div>
             </div>
 
@@ -70,8 +70,8 @@
               <label for="start-time-hours" style="color:white;">When?</label>
               <div class="input">
                 <div class="inline-inputs">
-                  <input name="event[start_date]" id="start-date" class="date large" size="30" />
-                  <input name="event[start_time]" id="start-time" class="mini" value="12:00pm" size="30"/>
+                  <input name="start_date" id="start-date" class="date large" size="30" />
+                  <input name="start_time" id="start-time" class="mini" value="12:00pm" size="30"/>
                 </div>
               </div>
             </div>
