--- a/views/event.erb
+++ b/views/event.erb
@@ -62,7 +62,7 @@
             <div class="clearfix">
               <label for="band-name" style="color:white;">What?</label>
               <div class="input">
-                <input name="band_name" id="band-name" class="date xlarge" size="30" />
+                <input name="band_name" id="band-name" class="xlarge" size="30" />
               </div>
             </div>
 
