--- a/views/event.erb
+++ b/views/event.erb
@@ -22,7 +22,7 @@
           }
         });
 
-        $('.date').datepicker();
+        $('.date').datepicker( "option", "dateFormat", 'yyyy-mm-dd');
       });
     </script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" >
