fuck you datepicker

--- a/views/event.erb
+++ b/views/event.erb
@@ -22,7 +22,7 @@
           }
         });
 
-        $('.date').datepicker( "option", "dateFormat", 'yyyy-mm-dd');
+        $('.date').datepicker({dateFormat: 'yy-mm-dd'});
       });
     </script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" >
