--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,7 @@
     <script language="javascript" type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js' type='text/javascript'></script>
     <script language="javascript" type="text/javascript" src="/javascript/underscore-min.js"></script>
+    <script language="javascript" type="text/javascript" src="/javascript/spin.min.js"></script>
     <script language="javascript" type="text/javascript" src="/javascript/bootstrap-modal.js"></script>
     <script language="javascript" type="text/javascript" src="/javascript/bootstrap-tabs.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDCEhOTsxuuXVPsHbA4rPofhK1azdoF7-M&sensor=true"></script>
@@ -143,9 +144,11 @@
       // ajax request for events given a date
       function reqEventsByDate() {
 
+        $('#search-evt-modal').modal('toggle');
+
         // clear any existing event markers
         $(markers).each(function () {
-          this.set_map(null);
+          this.setMap(null);
         });
 
         // reset the eviction array 
@@ -160,6 +163,8 @@
           success: function(data) {
             console.log('success');
             testData = data;
+
+            $('#search-evt-modal').modal('toggle');
 
             _.each(data, function(evnt) { 
                markers.push( setLocMarker(evnt.event.location));
@@ -215,6 +220,25 @@
         $('form .btn').click(function() {
           $(this).parents('form').submit();
         });
+
+        $('#search-evt-modal').modal( {backdrop: 'static'});
+        //$('#search-evt-modal').modal('toggle');
+
+        // set the search spinner
+        var spin_opts = {
+          lines: 12, // The number of lines to draw
+          length: 7, // The length of each line
+          width: 4, // The line thickness
+          radius: 15, // The radius of the inner circle
+          color: '#000', // #rgb or #rrggbb
+          speed: 1, // Rounds per second
+          trail: 80, // Afterglow percentage
+          shadow: true // Whether to render a shadow
+        };
+
+        var target  = document.getElementById('spin-body');
+        var spinner = new Spinner(spin_opts).spin(target);
+
       });
     </script>
       
@@ -246,19 +270,32 @@
     <div id="post-img-modal" class="modal hide fade">
       <div class="modal-header">
         <a href="#" class="close">&times;</a>
-        <h3>Almost there...</h3>
+        <h6>Almost there...</h6>
       </div>
       <div class="modal-body">
+        <h5>
+          CloseEnough makes it simple and fun to <strong>view</strong> and <strong>share</strong> events that are happening near you.
+          Post an image of an event flyer from your phone or computer now! 
+        </h5>
       </div>
       <div class="modal-footer">
+        <a href="#" class="btn large primary">Post</a>
         <div class="input">
-          <form method="post" action="events/new" enctype="multipart/form-data" name="imgUploadFrm">
-            <input class="input-file" id="fileInput" name="flyer_img" type="file">
-            <a href="#" class="btn large primary">Post</a>
+          <form method="post" action="" enctype="multipart/form-data" name="imgUploadFrm">
+            <input id="file_upload" name="file_upload" type="file" />
           </form>
         </div>
       </div>
     </div>
+
+    <div id="search-evt-modal" class="modal hide fade">
+      <a href="#" class="close"></a>
+      <div class="modal-header"><h6>Please hang on while we find great events in your location!</h6></div>
+      <div id="spin-body" class="modal-body" style="height: 100px;"></div>
+      <div class="modal-footer">
+      </div>
+    </div>
+
   </body>
 </html>
 
