backdrop not working

--- a/views/index.erb
+++ b/views/index.erb
@@ -221,7 +221,7 @@
           $(this).parents('form').submit();
         });
 
-        $('#search-evt-modal').modal( {backdrop: 'static'});
+        $('#search-evt-modal').modal( {backdrop: true});
 
         // set the search spinner
         var spin_opts = {
