Fixing form submit bug

--- a/views/index.erb
+++ b/views/index.erb
@@ -278,10 +278,10 @@
         </h5>
       </div>
       <div class="modal-footer">
-        <a href="#" class="btn large primary">Post</a>
         <div class="input">
-          <form method="post" action="" enctype="multipart/form-data" name="imgUploadFrm">
-            <input id="file_upload" name="file_upload" type="file" />
+          <form method="post" action="/events/new" enctype="multipart/form-data" name="imgUploadFrm">
+            <input id="file_upload" name="flyer_img" type="file" />
+            <a href="#" class="btn large primary">Post</a>
           </form>
         </div>
       </div>
