even more madness

--- a/views/index.erb
+++ b/views/index.erb
@@ -223,6 +223,7 @@
         });
 
         $('#search-evt-modal').modal( {backdrop: true});
+        $('#post-evt-modal').modal( {backdrop: 'static'});
 
         // set the search spinner
         var spin_opts = {
@@ -276,8 +277,8 @@
       </div>
       <div class="modal-body">
         <h5>
-          CloseEnough makes it simple and fun to <strong>view</strong> and <strong>share</strong> events that are happening near you.
-          Submit an event flyer now by posting an image rom your phone or computer! 
+          CloseEnough makes it fun and easy to <strong>view</strong> and <strong>share</strong> events near you.
+          Submit an event flyer by posting an image now! 
         </h5>
       </div>
       <div class="modal-footer">
